# cookiecutter-python

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
hooks/: pre_gen_project.py
{{cookiecutter.project_repo_name}}/: Makefile  README.md  pyproject.toml  requirements-dev.txt
